--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     вашего
                     отпуска.</p>
                 <ul class="intro__list">
-                    <li class="intro__lists">Часовых поясов <span class="intro__lists_number"> 11</span></li>
-                    <li class="intro__lists">Объектов природного наследия ЮНЕСКО <span class="intro__lists_number">
+                    <li class="intro__lists">Часовых поясов <span class="intro__lists intro__lists_number"> 11</span></li>
+                    <li class="intro__lists">Объектов природного наследия ЮНЕСКО <span class="intro__lists intro__lists_number">
                             12</span></li>
-                    <li class="intro__lists">Объектов культурного наследия ЮНЕСКО <span class="intro__lists_number">
+                    <li class="intro__lists">Объектов культурного наследия ЮНЕСКО <span class="intro__lists intro__lists_number">
                             16</span></li>
-                    <li class="intro__lists">Природных заповедников <span class="intro__lists_number"> 105</span></li>
-                    <li class="intro__lists">Аэропортов <span class="intro__lists_number"> 241</span></li>
+                    <li class="intro__lists">Природных заповедников <span class="intro__lists intro__lists_number"> 105</span></li>
+                    <li class="intro__lists">Аэропортов <span class="intro__lists intro__lists_number"> 241</span></li>
                 </ul>
             </section>
             <div class="photo-grid">
