--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body class="pages">
     <div class="page">
-        <header>
-            <div class="header">
+        <header class="header">
+            
                 <img src="./image/header-logo.svg" class="header__logo" alt="карта">
                 <ul class="header__lang">
                     <li><a href="#" class="header__lang-link">Ru</a></li>
-                    <li><a href="#" class="header__lang-link header__lang-links">En</a></li>
+                    <li><a href="#" class="header__lang-link header__lang-link_line">En</a></li>
                 </ul>
-            </div>
+            
         </header>
         <main>
             <section class="lead">
@@ -54,7 +54,7 @@
                     <li class="intro__lists">Аэропортов <span class="intro__lists intro__lists_number"> 241</span></li>
                 </ul>
             </section>
-            <div class="photo-grid">
+            <section class="photo-grid">
                 <img src="./image/photo-grid-1.jpg" class="photo-grid__item" alt="из окна поезда">
                 <img src="./image/photo-grid-2.jpg" class="photo-grid__item" alt="вершина горы">
                 <img src="./image/photo-grid-3.jpg" class="photo-grid__item" alt="волк">
@@ -67,15 +67,15 @@
                 <img src="./image/photo-grid-10.jpg" class="photo-grid__item" alt="долина">
                 <img src="./image/photo-grid-11.jpg" class="photo-grid__item" alt="обрыв">
                 <img src="./image/photo-grid-12.jpg" class="photo-grid__item" alt="туман">
-            </div>
+            </section>
             <section class="places">
-                <div class="place">
+                <article class="place">
                     <h2 class="place__title">Куршская
                         коса</h2>
                     <img src="./image/place-kosa.jpg" class="place__image" alt="коса">
                     <div class="place__website">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                        <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
                     </div>
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -91,14 +91,14 @@
                             суету,
                             окуная в спокойствие природы и запах стального, прохладного моря.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Кольский</h2>
                     <img src="./image/place-kolsky.jpg" class="place__image" alt="Кольский">
                     <div class="place__website">
                         <h4 class="place__url-heading">URL</h4>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                            class="place__link">National Geographic</a>
+                            class="place__link" target="_blank">National Geographic</a>
                     </div>
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
@@ -113,14 +113,14 @@
                             сияние начинает сбываться с билетом
                             в Мурманск.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Алтай</h2>
                     <img src="./image/place-altai.jpg" class="place__image" alt="Алтай">
                     <div class="place__website">
                         <h4 class="place__url-heading">URL</h4>
                         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-                            class="place__link place__links">Facebook</a>
+                            class="place__link place__links" target="_blank">Facebook</a>
                     </div>
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
@@ -138,13 +138,13 @@
                             Алтайского
                             края.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <img src="./image/place-winter-baikal.jpg" class="place__image" alt="лёд">
                     <div class="place__website">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                        <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
@@ -160,13 +160,13 @@
                             тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
                             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Карелия</h2>
                     <img src="./image/place-karelia.jpg" class="place__image" alt="лес">
                     <div class="place__website">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -181,7 +181,7 @@
                             деревья в
                             паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
-                </div>
+                </article>
             </section>
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
                 <img src='./image/cover-trains.jpg' class="cover__background" alt="байкал">
@@ -192,15 +192,15 @@
                     от столицы до Байкала на электричках.</p>
             </a>
         </main>
-        <footer>
-            <div class="footer">
+        <footer class="footer">
+            <nav>
                 <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
                 <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
                 <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
                 <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
                 <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
                 <p class="footer__copyright">© 2022. Markina Olecia</p>
-            </div>
+            </nav>
         </footer>
     </div>
 </body>
