--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     от столицы до Байкала на электричках.</p>
             </a>
         </main>
-        <footer class="footer">
-            <nav>
+        <footer >
+            <nav class="footer">
                 <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
                 <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
                 <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
