--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 отпуска.</p>
             <ul class="intro__list">
                 <li class="intro__lists">Часовых поясов <span class="intro__lists intro__number"> 11</span></li>
-                <li class="intro__lists">Объектов природного наследия ЮНЕСКО <span class="intro__lists intro__number">
+                <li class="intro__lists">Объектов природного наследия ЮНЕСКО <span class="intro__number">
                         12</span></li>
                 <li class="intro__lists">Объектов культурного наследия ЮНЕСКО <span class="intro__lists intro__number">
                         16</span></li>
@@ -192,8 +192,8 @@
             </a>
         </section>
     </main>
-    <footer>
-        <nav class="footer">
+    <footer class="footer">
+        <nav class="footer__links">
             <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
             <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
             <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
